--- a/tools/Pliant.Workbench/Ui/Components/MainMenu/MenuContent/SettingsMenuContent.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/MainMenu/MenuContent/SettingsMenuContent.xaml
@@ -7,14 +7,24 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              wpf:Css.Class="menuContent settingsMenuContent"
+             Background="{StaticResource MenuContentBackColor}"
 >
     <Grid wpf:Css.Class="inner">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid wpf:Css.Class="header">
-            <TextBlock wpf:Css.Class="headerText">SETTINGS</TextBlock>
+        <Grid 
+            wpf:Css.Class="header" Grid.Row="0"
+            Margin="0,0,0,10"
+            >
+            <TextBlock 
+                wpf:Css.Class="headerText"
+                Foreground="{StaticResource MenuContentHeaderTextColor}"
+                FontWeight="Bold"
+                >
+                SETTINGS
+            </TextBlock>
         </Grid>
     </Grid>
 </UserControl>
