--- a/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/OpenFileDialogComponent.xaml
+++ b/tools/Pliant.Workbench/Ui/Components/OpenFileDialog/OpenFileDialogComponent.xaml
@@ -10,7 +10,9 @@
              xmlns:pathTextBox="clr-namespace:Pliant.Workbench.Ui.Controls.PathTextBox"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-             wpf:Css.Class="openFileDialog">
+             wpf:Css.Class="openFileDialog"
+             Background="{StaticResource DialogBackColor}"
+             >
     <Grid x:Name="openFileDialogContainer" Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
@@ -23,8 +25,15 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Text="{Binding RelativeSource={RelativeSource AncestorType=local:OpenFileDialogComponent, AncestorLevel=1}, Path=RootPath}"></TextBlock>
-            <pathTextBox:PathTextBox Text="{Binding RelativeSource={RelativeSource AncestorType=local:OpenFileDialogComponent, AncestorLevel=1}, Path=TypedPath, Mode=TwoWay}"></pathTextBox:PathTextBox>
+            <TextBlock Grid.Row="0" 
+                       FontSize="15"
+                       Foreground="White"
+                       Text="{Binding RelativeSource={RelativeSource AncestorType=local:OpenFileDialogComponent, AncestorLevel=1}, Path=RootPath}"></TextBlock>
+            <pathTextBox:PathTextBox x:Name="pathTextBox"
+                                     Grid.Row="1"
+                                     FontSize="15"
+                                     Text="{Binding RelativeSource={RelativeSource AncestorType=local:OpenFileDialogComponent, AncestorLevel=1}, Path=TypedPath, Mode=TwoWay}">
+            </pathTextBox:PathTextBox>
         </Grid>
         
         <Grid Grid.Row="1">
