Minor fixes before abandoning branch in favor of separate editor repo

--- a/tools/Pliant.Workbench/App.xaml
+++ b/tools/Pliant.Workbench/App.xaml
@@ -8,6 +8,9 @@
 
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Pliant.Workbench;component/Ui/Styles/Colors/VsCode.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Pliant.Workbench;component/Ui/Styles/Button.xaml" />
+                
                 <ResourceDictionary>
                     <SolidColorBrush x:Key="MainBackColor" Color="#1E1E1E"></SolidColorBrush>
 
